[project]
name = "prtool"
version = "0.1.0"
description = "PRtool using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0",
    "fastapi>=0.128.5",
    "langchain-google-genai>=4.2.1",
    "litellm>=1.75.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "structlog>=25.5.0",
]

[project.scripts]
prtool = "prtool.main:run"
run_crew = "prtool.main:run"
train = "prtool.main:train"
replay = "prtool.main:replay"
test = "prtool.main:test"
run_with_trigger = "prtool.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
